--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Fira+Mono:wght@400;500;700&family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -7,6 +6,8 @@
 
 @layer base {
 	html {
-		font-family: "Josefin Sans", "Source Sans 3", sans-serif;
+		font-family: 'Josefin Sans', sans-serif;
+        background-color: #ebf2fa;
+        color: #0d1b2a;
 	}
 }
